--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "node server.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --verbose"
+  },
+  "jest": {
+    "testEnvironment": "jsdom"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -22,6 +26,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "formik": "^2.4.6",
+    "jest-fetch-mock": "^3.0.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "react": "^18.2.0",
@@ -30,15 +35,25 @@
     "styled-components": "^6.1.9"
   },
   "devDependencies": {
+    "@babel/core": "^7.24.6",
+    "@babel/preset-env": "^7.24.6",
+    "@babel/preset-react": "^7.24.6",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^15.0.7",
     "@types/react": "^18.2.56",
     "@types/react-dom": "^18.2.19",
     "@vitejs/plugin-basic-ssl": "^1.1.0",
     "@vitejs/plugin-react": "^4.2.1",
+    "babel-jest": "^29.7.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "jest-styled-components": "^7.2.0",
+    "react-test-renderer": "^18.3.1",
     "vite": "^5.1.4"
   }
 }
